--- a/_posts/2023-08-20-daily.md
+++ b/_posts/2023-08-20-daily.md
@@ -54,7 +54,7 @@ use_math: true
 그리고 이 결론에 조금 오버스럽게 반응하는 이유는,\\
 요 근래 골골대며 몸도 마음도 축 처져 있었는데, 아무튼 마음 먹기 나름이라!\\
 기합 한번 넣고 힘차게 다시 일어나야겠다.\\
-그리고 나도 주변 사람들에게 의지를 불어주고 싶다. 
+그리고 태권도맨의 파이팅이 내게 전해졌듯, 주변 사람들에게 에너지를 전파하고 싶다. 
 
 이제 러닝 갔다 와야지. 아자!
 
