--- a/_posts/2023-08-20-daily.md
+++ b/_posts/2023-08-20-daily.md
@@ -11,6 +11,9 @@ toc: true
 toc_sticky : true
 toc_label: "Contents"
 use_math: true
+sitemap :
+  changefreq : daily
+  priority : 1.0
 ---
 
 ### 테니스와 기합
