correct figure name

--- a/_posts/2023-09-30-decaf.md
+++ b/_posts/2023-09-30-decaf.md
@@ -37,7 +37,7 @@ Unlike previous methods, in this paper, DecAF employs both IR-based and SP-based
 
 ## DecAF Method
 
-![overview](/assets/images/2023-09-30/overview.jpg){: width="700"}{: .align-center}
+![overview](/assets/images/2023-09-30/overview.JPG){: width="700"}{: .align-center}
 
 The framework is divided into following four steps: 
 
@@ -52,7 +52,7 @@ Instead of using a large and complicated KB, it is easier to retrieve relevant i
 Therefore, authors convert the KB into documents by concatenating compositions in triplets with spaces.
 Here is an example:
 
-![example](/assets/images/2023-09-30/example.jpg){: width="450"}{: .align-center}
+![example](/assets/images/2023-09-30/example.JPG){: width="450"}{: .align-center}
 
 Then, sentences with the same head (*Freecase* in the above example) are grouped into the same document, preserving the structural information of 1-hop subgraph.
 
@@ -105,7 +105,7 @@ Settings:
 DecAF achieves a new SOTA performance on WebQSP and FreebaseQA datasets and very competitive results on CWQ dataset.
  The figure below shows F1 scores on the test split of GrailQA.
 
-![exp](/assets/images/2023-09-30/exp.jpg){: width="680"}{: .align-center}
+![exp](/assets/images/2023-09-30/exp.JPG){: width="680"}{: .align-center}
 
 ### Ablation Study
 
