--- a/_posts/2023-08-20-daily.md
+++ b/_posts/2023-08-20-daily.md
@@ -1,6 +1,6 @@
 ---
 title: "기 합!!!"
-excerpt: "Post displaying the various ways of highlighting code in Markdown."
+excerpt: "긍정 마인드의 시작"
 last_modified_at: 2023-08-20
 categories: 
   - Daily
