--- a/_posts/2023-09-30-decaf.md
+++ b/_posts/2023-09-30-decaf.md
@@ -1,6 +1,6 @@
 ---
 title: "[Paper Review] DecAF: Joint Decoding of Answers and Logical Forms for Question Answering over Knowledge Bases"
-excerpt: "Post displaying the various ways of highlighting code in Markdown."
+excerpt: "English paper review"
 last_modified_at: 2023-09-30
 categories: 
   - Paper Review
