fix some settings

--- a/_posts/2023-08-20-daily.md
+++ b/_posts/2023-08-20-daily.md
@@ -1,7 +1,7 @@
 ---
 title: "기 합!!!"
 excerpt: "긍정 마인드의 시작"
-last_modified_at: 2023-08-20
+last_modified_at: 2023-10-28
 categories: 
   - Daily
 tags: 
@@ -20,7 +20,7 @@ sitemap :
 ---
 테니스를 배울 때 내가 리듬을 너무 못 타자 코치님이 기합을 넣어보라 하셨다.
 
-꼬꼬마 시절 태권도장 다닐 때야 우렁차게 기합을 넣었지만, 성인이 된 이후에는 기합을 넣어본 기억이 없다. \\
+꼬꼬마 시절 태권도장 다닐 때야 우렁찬 목소리로 기합을 넣었지만, 성인이 된 이후에 기합을 넣었던 기억은 없다. \\
 기합을 넣으라고 하시니.. 기어들어가는 목소리로 코치님을 따라 기합을 넣어봤다. \\
 원체 내가 부끄럼 타는 성격인 걸 아셨기때문인지, 그래서 얘는 이제 기합 넣느라 온 신경이 쓰이겠구나 싶으셨는지, 몇 번 시키곤 마음속으로 해도 된다고 하셨다. \\
 나는 그날 그 레슨에서만 속으로 기합을 넣고 영영 잊어버렸다.
