--- a/_posts/2023-10-04-voyagerX.md
+++ b/_posts/2023-10-04-voyagerX.md
@@ -1,6 +1,7 @@
 ---
 title: "VoyagerX 회사 탐방"
 excerpt: "VoyagerX 4년차 친구와 오피스 투어"
+date: 2023-10-28
 last_modified_at: 2023-10-28
 categories: 
   - Company Tour
