--- a/_posts/2023-12-12-KG-GPT.md
+++ b/_posts/2023-12-12-KG-GPT.md
@@ -1,6 +1,7 @@
 ---
 title: "[Paper Review] KG-GPT: A General Framework for Reasoning on Knoledge Graphs Using Large Language Models"
 excerpt: "English paper review"
+date: 2023-12-12
 last_modified_at: 2023-12-12
 categories: 
   - Paper Review
